[package]
name = "orbiton"
version = "0.1.0"
edition = "2021"
authors = ["Orbit Team <orbit@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitrs/orbit"
readme = "README.md"
description = "CLI tooling for the Orbit UI framework ecosystem"

[dependencies]
# Core dependencies
orbit = { version = "0.1.0", path = "../orbit" }
orbit-analyzer = { version = "0.1.0", path = "../orbit-analyzer" }

# CLI libraries
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11.0"
console = "0.15.7"
indicatif = "0.17.6"
notify = "6.1.1"

# Template management
liquid = "0.26.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.27"

# Filesystem operations
walkdir = "2.4.0"

# Error handling
thiserror = "1.0"
log = "0.4"
env_logger = "0.10.1"
anyhow = "1.0.75"

# HTTP and networking
reqwest = { version = "0.11", features = ["json", "blocking"] }
tiny_http = "0.12.0"
websocket = "0.26.5"

# Process handling
ctrlc = "3.4.1"
open = "5.0.0"

[[bin]]
name = "orbiton"
path = "src/main.rs"
