[package]
name = "orbiton"
version = "0.1.0"
edition = "2021"
authors = ["Orbit Team <orbit@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitrs/orbitrs"
readme = "README.md"
description = "CLI tooling for the Orbit UI framework ecosystem"

[dependencies]
# Core dependencies
orbitrs = { git = "https://github.com/orbitrs/orbitrs.git", branch = "main" }

# Use normal path for local dev and different path for CI
orbit-analyzer = { version = "0.1.0", path = "../orbit-analyzer" }

# CLI libraries
clap = { version = "4.4", features = ["derive", "std"], default-features = false }
dialoguer = "0.11.0"
console = "0.15.7"
indicatif = "0.17.6"
notify = "6.1.1"

# Template management
liquid = "0.26.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.27"

# Filesystem operations
walkdir = "2.4.0"

# Error handling
thiserror = "1.0"
log = "0.4"
env_logger = "0.10.1"
anyhow = "1.0.75"

# HTTP and networking
reqwest = { version = "0.11", features = ["json", "blocking"] }
tiny_http = "0.12.0"
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.21"  # Modern WebSocket implementation
futures-util = "0.3"  # For WebSocket stream utilities

# Process handling
ctrlc = "3.4.1"
open = "5.0.0"

[features]
default = ["local-dependencies"]
local-dependencies = []
ci = []

# Patch sections to override dependency sources in different environments
[patch.crates-io]
# Empty placeholder for consistency

# Patch GitHub repositories with local paths
[patch."https://github.com/orbitrs/orbitrs.git"]
orbitrs = { path = "../orbitrs" }

[patch."https://github.com/orbitrs/orbit-analyzer.git"]
orbit-analyzer = { path = "../orbit-analyzer" }

# Testing
tempfile = "3.8.0"

[[bin]]
name = "orbiton"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8.0"
